--- a/src/app/components/fuel-management/fuel-management.component.css
+++ b/src/app/components/fuel-management/fuel-management.component.css
@@ -9,10 +9,12 @@
 /* Contenido Principal */
 .dashboard-content {
   flex-grow: 1;
-  padding: 2rem;
+  margin-left: 250px;
+  padding: 20px;
   overflow-y: auto;
   height: 100vh;
   box-sizing: border-box;
+  width: calc(100% - 250px);
 }
 
 /* Contenedor del Formulario */
@@ -129,6 +131,49 @@ button:disabled {
   color: #e53e3e; /* Rojo error */
   background-color: #ffe6e6;
   border: 1px solid #e53e3e;
+}
+
+/* Search Input */
+#machine-search-input {
+  width: 100%;
+  padding: 10px;
+  margin-top: 8px;
+  font-size: 1rem;
+  border: 1px solid #cbd5e0;
+  border-radius: 4px;
+  background-color: #edf2f7;
+  transition: border-color 0.3s ease;
+}
+
+#machine-search-input:focus {
+  border-color: #63b3ed;
+  background-color: #e6fffa;
+  outline: none;
+}
+
+/* Dropdown List */
+.dropdown-list {
+  position: relative;
+  max-height: 200px;
+  overflow-y: auto;
+  border: 1px solid #cbd5e0;
+  border-radius: 4px;
+  margin-top: 5px;
+  background-color: #ffffff;
+  box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
+}
+
+/* Dropdown Items */
+.dropdown-item {
+  padding: 10px;
+  font-size: 1rem;
+  color: #4a5568;
+  cursor: pointer;
+  transition: background-color 0.3s ease;
+}
+
+.dropdown-item:hover {
+  background-color: #e2e8f0;
 }
 
 /* Estilos Responsivos */
