--- a/src/app/components/dashboard/dashboard.component.html
+++ b/src/app/components/dashboard/dashboard.component.html
@@ -10,13 +10,8 @@
           [(ngModel)]="selectedResource"
           (change)="onResourceChange()"
         >
-<<<<<<< Updated upstream
           <option *ngFor="let resource of resources" [value]="resource.id">
             {{ resource.name }}
-=======
-          <option *ngFor="let resource of resources" [value]="resource">
-            {{ resource }}
->>>>>>> Stashed changes
           </option>
         </select>
       </div>
@@ -25,10 +20,7 @@
       </div>
     </div>
 
-<<<<<<< Updated upstream
     <!-- Proyectos en Curso -->
-=======
->>>>>>> Stashed changes
     <div class="card project-card">
       <h3>Proyectos en Total</h3>
       <div class="project-info">
@@ -87,7 +79,7 @@
           <tbody>
             <tr *ngFor="let event of events">
               <td>{{ event.name }}</td>
-              <td>{{ event.date | date: "MM/dd/yy" }}</td>
+              <td>{{ event.date | date : "MM/dd/yy" }}</td>
               <td>{{ event.horaInicio }}</td>
               <td>{{ event.horaFin }}</td>
             </tr>
@@ -108,7 +100,7 @@
           [chart]="lineChartOptions.chart"
           [xaxis]="lineChartOptions.xaxis"
           [title]="lineChartOptions.title"
-          style="width: 100%; height: 100%;"
+          style="width: 100%; height: 100%"
         ></apx-chart>
       </div>
     </div>
