--- a/src/app/components/calendar/calendar-modal/calendar-modal.component.html
+++ b/src/app/components/calendar/calendar-modal/calendar-modal.component.html
@@ -101,8 +101,8 @@
               class="form-control"
             >
               <option value="">Selecciona una maquinaria</option>
-              <option *ngFor="let maq of machines" [value]="maq.id">
-                {{ maq.name }}
+              <option *ngFor="let maq of machines" [value]="maq">
+                {{ maq }}
               </option>
             </select>
           </div>
@@ -238,8 +238,8 @@
                 class="form-control"
               >
                 <option value="">Selecciona una maquinaria</option>
-                <option *ngFor="let maq of machines" [value]="maq.id">
-                  {{ maq.name }}
+                <option *ngFor="let maq of machines" [value]="maq">
+                  {{ maq }}
                 </option>
               </select>
             </div>
