--- a/src/app/components/fuel-management/fuel-management.component.css
+++ b/src/app/components/fuel-management/fuel-management.component.css
@@ -1,6 +1,3 @@
-<<<<<<< Updated upstream
-/* Contenedor Principal */
-=======
 .fuel-management-container {
   max-width: 100%;
   margin: 0 auto;
@@ -20,14 +17,14 @@
 }
 
 /* Contenedor principal */
->>>>>>> Stashed changes
+
 .dashboard-container {
   display: flex;
   height: 100vh;
   overflow: hidden;
   background-color: #f4f6f8; /* Fondo gris claro */
 }
-<<<<<<< Updated upstream
+
 
 /* Contenido Principal */
 .dashboard-content {
@@ -218,7 +215,6 @@ button:disabled {
   button {
     font-size: 1rem;
   }
-=======
 
 label {
   display: block;
@@ -273,5 +269,6 @@ button:hover {
 .error-message {
   color: red;
   margin-top: 10px;
->>>>>>> Stashed changes
+}
+
 }
